# comunidad_back

./: Pipfile  README.md  pyproject.toml
csa/: .gitignore  manage.py
csa/blog/: admin.py  apiviews.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
csa/blog/fixtures/: articlesblog.yaml  commentsblog.yaml  temasblog.yaml  users.yaml
csa/blog/migrations/: 0001_initial.py  0002_remove_temaarticulo_lecturas.py  0003_articulo_imagen.py  0004_auto_20201215_1324.py  0005_auto_20201215_1859.py  0006_auto_20201217_1807.py  0007_auto_20201229_1355.py  0008_auto_20210120_1208.py  0009_auto_20210120_1323.py  0010_auto_20210212_2317.py  0011_auto_20210215_1004.py  0012_auto_20211108_0950.py
csa/csa/: asgi.py  celery.py  pub.py  roles.py  urls.py  wsgi.py
csa/csa/settings/: base.py  devel.py
csa/foro/: admin.py  apiviews.py  models.py  permissions.py  serializers.py  tasks.py  urls.py
csa/foro/fixtures/: comentariospublicaciones.yaml  publicacionesforo.yaml  temasforo.yaml
csa/foro/migrations/: 0001_initial.py  0002_publicacion_censurado.py  0003_temaforo_imagen.py  0004_auto_20201231_1658.py  0005_auto_20201231_1726.py  0006_auto_20210112_1855.py  0007_auto_20210120_1208.py  0008_auto_20210120_1323.py  0009_auto_20210205_1226.py  (+1 more)
csa/mailapp/: models.py  views.py
csa/news/: admin.py  apiviews.py  apps.py  models.py  serializers.py  tasks.py  urls.py
csa/userprofile/: admin.py  apiviews.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
templates/: detalle.html  maqueta.html  prototipo.html  styles.css
(+26 files in other folders)
